# hack-nix

./: README  README.md  Setup.hs  TODO  hack-nix.cabal
hack-nix-envs/nix/: default.nix  default9.nix
src/: BuildEnvs.hs  Config.hs  Index.hs  Main.hs  MaybeRead.hs  Nix.hs  NixLangUtil.hs  NixLanguage.hs  Package.hs  Patching.hs  ProcessPool.hs  Utils.hs
tests/: test.cabal
