name:            hack-nix
version:         0.1.1
license:         BSD3
synopsis:        hackage to nix software distribution systrem
category:        Utils
maintainer:      Marc Weber <marco-oweber@gmx.de>
build-type:      Simple
cabal-version:   >= 1.2
description:
  Utility helping getting hackage packages into the nix package manager.


executable hack-nix

  build-depends:    haskell98
                  , base
                  , directory
                  , containers
                  , network
                  , zlib, tar
                  , bytestring
                  , filepath
                  , Cabal >= 1.5.1
                  , process
                  , mtl
                  , pretty
                  , base >= 2 && < 5
                  , filepath >= 1.0
                  , mtl
                  , interlude

  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options   : -Wall
